--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
     "mint-ui": "^2.2.13",
+    "query-string": "^6.8.1",
     "swiper": "^4.5.0",
+    "url-parse": "^1.4.7",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
